force-app/main/default/objects/Enquiry__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <inlineHelpText>Budget range discussed</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under £800/week</fullName>
            </value>
            <value>
                <fullName>£800-£1000/week</fullName>
            </value>
            <value>
                <fullName>£1000-£1200/week</fullName>
            </value>
            <value>
                <fullName>£1200-£1500/week</fullName>
            </value>
            <value>
                <fullName>Over £1500/week</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>