force-app/main/default/objects/Enquiry__c/fields/Enquirer_Account__c.field-meta.xml
<CustomField>
    <fullName>Enquirer_Account__c</fullName>
    <label>Enquirer</label>
    <type>Lookup</type>
    <description>Person making the enquiry (family member or professional)</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries (Enquirer)</relationshipLabel>
    <relationshipName>Enquiries_Enquirer_CC</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>