force-app/main/default/objects/Enquiry__c/fields/Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Date__c</fullName>
    <label>Enquiry Date</label>
    <type>DateTime</type>
    <description>Date and time when enquiry was received</description>
</CustomField>