force-app/main/default/objects/Enquiry__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <inlineHelpText>How the enquiry was received</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Referral - GP</fullName>
            </value>
            <value>
                <fullName>Referral - Hospital</fullName>
            </value>
            <value>
                <fullName>Referral - Social Services</fullName>
            </value>
            <value>
                <fullName>Referral - Family/Friend</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>