force-app/main/default/objects/Enquiry__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <inlineHelpText>Type of care enquired about</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respite Care</fullName>
            </value>
            <value>
                <fullName>Permanent Residential</fullName>
            </value>
            <value>
                <fullName>Nursing Care</fullName>
            </value>
            <value>
                <fullName>Dementia Care</fullName>
            </value>
            <value>
                <fullName>Assessment Only</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>