force-app/main/default/objects/Enquiry__c/fields/First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date__c</fullName>
    <label>First Response Date</label>
    <type>DateTime</type>
    <inlineHelpText>Date and time of first response to enquiry</inlineHelpText>
</CustomField>