force-app/main/default/objects/Enquiry__c/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <label>Follow Up Notes</label>
    <type>LongTextArea</type>
    <inlineHelpText>Notes from follow up activities</inlineHelpText>
    <length>10000</length>
</CustomField>