force-app/main/default/objects/Enquiry__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <inlineHelpText>Expected funding type</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>NHS Continuing Healthcare</fullName>
            </value>
            <value>
                <fullName>Mixed Funding</fullName>
            </value>
            <value>
                <fullName>Not Yet Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>