force-app/main/default/objects/Enquiry__c/fields/Information_Pack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Information_Pack_Sent__c</fullName>
    <label>Information Pack Sent</label>
    <type>Checkbox</type>
    <description>Has information pack been sent</description>
    <defaultValue>false</defaultValue>
</CustomField>