force-app/main/default/objects/Enquiry__c/fields/Information_Pack_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Information_Pack_Sent_Date__c</fullName>
    <label>Information Pack Sent Date</label>
    <type>Date</type>
    <inlineHelpText>Date when information pack was sent</inlineHelpText>
</CustomField>