force-app/main/default/objects/Enquiry__c/fields/Initial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notes__c</fullName>
    <label>Initial Notes</label>
    <type>LongTextArea</type>
    <inlineHelpText>Notes from initial enquiry</inlineHelpText>
    <length>10000</length>
</CustomField>