force-app/main/default/objects/Enquiry__c/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <label>Next Follow Up Date</label>
    <type>Date</type>
    <inlineHelpText>Date for next follow up</inlineHelpText>
</CustomField>