force-app/main/default/objects/Enquiry__c/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <label>Preferred Care Home</label>
    <type>Lookup</type>
    <description>Preferred care home location</description>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries_CC</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>