force-app/main/default/objects/Enquiry__c/fields/Preferred_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Move_In_Date__c</fullName>
    <label>Preferred Move In Date</label>
    <type>Date</type>
    <inlineHelpText>Preferred date for admission</inlineHelpText>
</CustomField>