force-app/main/default/objects/Enquiry__c/fields/Prospective_Resident__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Resident__c</fullName>
    <label>Prospective Resident</label>
    <type>Lookup</type>
    <description>The person requiring care</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries (Resident)</relationshipLabel>
    <relationshipName>Enquiries_Resident_CC</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>