force-app/main/default/objects/Enquiry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description>Current status of the enquiry</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Information Sent</fullName>
            </value>
            <value>
                <fullName>Visit Scheduled</fullName>
            </value>
            <value>
                <fullName>Visit Completed</fullName>
            </value>
            <value>
                <fullName>Converted to Opportunity</fullName>
            </value>
            <value>
                <fullName>Not Proceeding</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>