force-app/main/default/objects/Enquiry__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <inlineHelpText>How urgent is the need</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate (Within 1 week)</fullName>
            </value>
            <value>
                <fullName>Urgent (Within 2-4 weeks)</fullName>
            </value>
            <value>
                <fullName>Soon (Within 1-3 months)</fullName>
            </value>
            <value>
                <fullName>Future Planning (3+ months)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>